prompt library and compiler issues fixes